# c2023-challenge

./: CMakeLists.txt  五子棋.pptx
Design/: CMakeLists.txt
Design/Gomoku/: Includes.h  WinCondition.h  chess_robot.h  chessboard.h  hashtable.h  main.c  texts.h
level1/: CMakeLists.txt
level1/p01_running_letter/: main.c
level1/p02_is_prime/: main.c  prime.h
level1/p03_all_primes/: main.c
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: main.c
level1/p07_maze/: main.c
level1/p08_push_boxes/: main.c
level1/p09_linked_list/: Queue.h  main.c
level1/p10_warehouse/: main.c  warehouse_managing.h
level1/p11_bubble_sort/: main.c
level1/p12_selection_sort/: main.c
level1/p13_insertion_sort/: main.c
level1/p14_linked_list/: main.c
